[package]
name = "dispatch-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro_derive = { path = "./hello_macro_derive" }
# messenger = { path = "./messenger" }
rand = "0.8.4"

[[bin]]
name = "dispatch-logic"
path = "src/main.rs"
